pasang tracker smartfren slider, yupi bottom content

--- a/yupi/html/bottom.html
+++ b/yupi/html/bottom.html
@@ -3,7 +3,7 @@
         <div class="row-fluid">
             <div class="span5">
                 <div class="official-shop-branding__video">
-                    <iframe width="560" height="315" frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/uEm2AlUETmk?html5=1&showinfo=0"></iframe>
+                    <iframe id="video-iframe" width="560" height="315" frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/uEm2AlUETmk?html5=1&showinfo=0&amp;enablejsapi=1"></iframe>
                 </div>
             </div>
             <div class="span7 pl-30">
